# transcript-bridge

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml  selfcheck.py
docs/superpowers/plans/: 2026-07-22-transcript-bridge.md
docs/superpowers/specs/: 2026-07-22-transcript-bridge-design.md
transcript_bridge/: __init__.py  canonical.py  cli.py  loss.py
transcript_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
transcript_bridge/formats/: __init__.py  claude_code.py  codex.py  openai.py
