[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-bridge"
version = "0.1.0"
description = "Loss-aware conversion between agent transcript formats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Victor Filtchev"}]
keywords = ["claude", "openai", "codex", "transcript", "agent", "jsonl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
transcript-bridge = "transcript_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["transcript_bridge*"]
